<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DuelDraw</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="start_new">New</string>
    <string name="draw">Draw</string>
    <string name="erase">Erase</string>
    <string name="start">Start</string>
    <string name="clear">Clear</string>
    <string name="connect_button">Connect</string>
    <string name="logo">Duel Draw</string>
    <string name="active_players">Active Players</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="challenge">Incoming Challenge\nfrom\n</string>
    <string name="blank"></string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="placeholder">Time Remaining : 00:00</string>
    <string name="gameresult">Game Results</string>
    <string name="backToMainMenu">Back To Main Menu</string>
    <string name="usrImg">Your Image</string>
    <string name="origImg">Original Image</string>
    <string name="SinglePlayerMode">Single Player Mode</string>
    <string name="MultiplayerMode">Multiplayer Mode</string>

</resources>