<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFCCCCCC"
    android:orientation="vertical"
    tools:context=".DrawActivity" >

    <TextView
        android:id="@+id/timerTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/placeholder"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:gravity="center" >

        <Button
            android:id="@+id/drawButton"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="10dp"
            android:background="@xml/round_buttons"
            android:drawableLeft="@drawable/brush"
            android:hapticFeedbackEnabled="true"
            android:onClick="setDraw"
            android:paddingLeft="8dp"
            android:text="@string/draw" />

        <Button
            android:id="@+id/eraseButton"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@xml/round_buttons"
            android:drawableLeft="@drawable/eraser"
            android:hapticFeedbackEnabled="true"
            android:onClick="setErase"
            android:paddingLeft="8dp"
            android:text="@string/erase" />

        <Button
            android:id="@+id/clearButton"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            android:background="@xml/round_buttons"
            android:drawableLeft="@drawable/new_pic"
            android:hapticFeedbackEnabled="true"
            android:onClick="clearGrid"
            android:paddingLeft="8dp"
            android:text="@string/clear" />
    </LinearLayout>

    <ca.ubc.dueldraw.DrawingView
        android:id="@+id/pixelGridView1"
        android:layout_width="350dp"
        android:layout_height="350dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="3dp" />

</LinearLayout>