<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
	<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="50sp"
    android:layout_marginTop="70sp">
	    <TextView
	        android:id="@+id/resutlTextView"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/gameresult"
	        android:gravity="center"
	        android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>
    
   	    <TextView
	        android:id="@+id/ratioScoreTextView"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:textAppearance="?android:attr/textAppearanceLarge" />
   	    <TextView
	        android:id="@+id/pixelScoreTextView"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:textAppearance="?android:attr/textAppearanceLarge" />
   	    <TextView
	        android:id="@+id/finalScoreTextView"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="50sp">
	    <TextView
	        android:id="@+id/result"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/blank"
	        android:gravity="center"
	        android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>
    
    
    <LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="50sp">
	    <TextView
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:text="Original Image"
	        android:gravity="center"
	        android:textAppearance="?android:attr/textAppearanceLarge" 
	              	android:layout_weight=".50"/>
	    <TextView
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:text="Your Image"
	        android:gravity="center"
	        android:textAppearance="?android:attr/textAppearanceLarge" 
	              	android:layout_weight=".50"/>
    </LinearLayout>
    
    <LinearLayout
    android:layout_width="match_parent" 
    android:layout_height="wrap_content">
	    <ImageView
	        android:id="@+id/refImage"
	      	android:layout_width="0dp"
	      	android:layout_height="100dp"
	      	android:scaleType="fitCenter" 
	      	android:layout_weight=".50"/>
	    <ImageView
	        android:id="@+id/userImage"
	      	android:layout_width="0dp"
	      	android:layout_height="100dp"
	      	android:scaleType="fitCenter" 
	      	android:layout_weight=".50"/>
    </LinearLayout>
    
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="50sp">
    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:onClick="backToMainMenu"
        android:text="@string/backToMainMenu" />

</LinearLayout>
</LinearLayout>
